feat/users (#226)
* fix compose

* add users schema

* gen and refactor sqlc

* rename package name

* fix build tag

* feat user
