# cmd/api/internal/datasource/database/models.go
@@ -1,0 +1,34 @@
+// Code generated by sqlc. DO NOT EDIT.
+
+package database
+
+import (
+	"time"
+)
+
+type Task struct {
+	// id is task id
+	ID string
+	// content is task content
+	Content   string
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
+
+// users is user information
+type User struct {
+	// id is user id
+	ID []byte
+	// sub is jwt subject
+	Sub string
+	// given_name of user
+	GivenName string
+	// family_name of user
+	FamilyName string
+	// email of user
+	Email string
+	// email_verified is whether email is verified
+	EmailVerified bool
+	CreatedAt     time.Time
+	UpdatedAt     time.Time
+}
